--- a/src/app/paginas/datos/datos.page.html
+++ b/src/app/paginas/datos/datos.page.html
@@ -1,7 +1,7 @@
-<app-encabezado titulo="Ver docente"></app-encabezado>
+<app-encabezado titulo="Datos"></app-encabezado>
 
 <ion-content>
-  <ion-card style="margin-bottom: 135%;">
+<!--   <ion-card style="margin-bottom: 135%;">
     <ion-card-header>
       <ion-card-title>Emmanuel Batún</ion-card-title>
       <ion-card-subtitle>Materia: Matemáticas</ion-card-subtitle>
@@ -16,5 +16,47 @@
 
   <ion-button expand="block" style="margin: 1em;">
     Editar
-  </ion-button>
+  </ion-button> -->
+
+  <!-- <ion-item>
+    <ion-label>Nombre</ion-label>
+    <ion-input placeholder="Emmanuel Batún"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Correo electronico</ion-label>
+    <ion-input placeholder="emanuel@correo.com"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Telefono</ion-label>
+    <ion-input placeholder="9981010201"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Area</ion-label>
+    <ion-select multiple="true" cancelText="Nah">
+      <ion-select-option value="bacon">Matematicas</ion-select-option>
+      <ion-select-option value="olives">Español</ion-select-option>
+      <ion-select-option value="xcheese">Geografia</ion-select-option>
+      <ion-select-option value="peppers">Green Peppers</ion-select-option>
+    </ion-select>
+  </ion-item>
+  
+  <ion-item style="margin-bottom: 130%;">
+    <ion-label>Estado</ion-label>
+    <ion-select multiple="true" cancelText="Nah">
+      <ion-select-option value="bacon">Activo</ion-select-option>
+      <ion-select-option value="olives">Español</ion-select-option>
+      <ion-select-option value="xcheese">Geografia</ion-select-option>
+      <ion-select-option value="peppers">Green Peppers</ion-select-option>
+    </ion-select>
+  </ion-item>
+
+  <ion-button expand="block" style="margin: 1em;">
+    Guardar
+  </ion-button> -->
+
+  <ion-button expand="block">Editar</ion-button>
+  <router-outlet></router-outlet>
 </ion-content>
